opam-version: "2.0"
name:         "rpi-gpio"
bug-reports:  "https://github.com/LaurentMazare/ocaml-rpi-gpio/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-rpi-gpio"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-rpi-gpio.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

depends: [
  "base" {>= "v0.12.0"}
  "dune" {>= "1.3.0" build}
  "ocaml" {>= "4.07"}
]

depopts: [
]

conflicts: [
]

available: os = "linux"

synopsis: "rpi-gpio interface for ocaml"
